# nokia_extensible_system_monitoring_framework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  USTALENIA.md  build.sh  cmake_install.cmake  cpu.sh  flake.nix  formatowanie.c  memoryUsage.sh  moje_piekne_notatki  moje_piekne_notatki.md  monitor  node  plik.weles  server.c
.ccls-cache/@@home@sileanth@nokia_extensible_system_monitoring_framework/: @nix@store@c8pfq5kkjbxj7h6kb7bz4y8v1l1v4ci6-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h.blob  @nix@store@c8pfq5kkjbxj7h6kb7bz4y8v1l1v4ci6-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h.blob  @nix@store@jgdz5wfqc6q6qhy17lsqnfpbkfi1fcar-gcc-12.2.0@include@c++@12.2.0@stdlib.h.blob  @nix@store@linb70pgp53f0kygxm5wk163dx22d681-glibc-2.37-45-dev@include@alloca.h.blob  @nix@store@linb70pgp53f0kygxm5wk163dx22d681-glibc-2.37-45-dev@include@arpa@inet.h.blob  @nix@store@linb70pgp53f0kygxm5wk163dx22d681-glibc-2.37-45-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@linb70pgp53f0kygxm5wk163dx22d681-glibc-2.37-45-dev@include@bits@byteswap.h.blob  (+82 more)
.github/workflows/: cmake-single-platform.yml
computing_node/: node.c
notatki/: USTALENIA.md
parser/: lexer.c  lexer.h  main.c  parser.c  parser.h
src/: client.c  client2_0.c  compile_with_parseer.sh  data_desc.txt  guid_client.c  guid_client2_0.c  parametry.txt  parametry2.sh  parametry2.txt  parser.c  parser.h  parser_test.cpp  plugin2.py  pomiary.txt  server  server.c  server2_0.c  server3_0.cpp  server3_02.cpp  server_with_data_annotation3_0.cpp  server_with_data_annotation3_02.cpp
(+27 files in other folders)
